# algo1

./: .gitignore
labo/clase_01/: ej1.cpp  ej2.cpp  ej3.cpp  ej4.cpp  ej5.cpp  ej6.cpp  ej7.cpp  ej8.cpp
labo/clase_02/: a  collatz.txt  ej1.cpp  ej2.cpp  ej3.cpp  ej4.cpp  ej5.cpp  ej6.cpp  ej7.cpp  ej8.cpp  ej9.cpp
labo/clase_03/Labo03-Vectores/: a  ejercicios.cpp  ejercicios.h  main.cpp
labo/clase_03/Labo03-Vectores/result/: apariciones.txt  palindromos.txt  promedio.txt
labo/clase_04/: ejemplo.tex  ejemplo.tex~  ejemplo1.fdb_latexmk  ejemplo1.fls
labo/clase_04/Taller04-archivos/: __latexindent_temp.tex  ejemplo.tex  ejemplo1.aux  ejemplo1.fdb_latexmk  ejemplo1.fls  ejemplo1.tex  ejemplo2.tex
labo/clase_05/: ej02.md
labo/clase_05/Labo05/: a  ejercicios.cpp  main.cpp
labo/clase_07/L07/CLion/L07-MatricesYTableros/: CMakeLists.txt
labo/clase_07/L07/CLion/L07-MatricesYTableros/src/: definiciones.h  ej02.cpp  ej02.h  ej03.cpp  ej03.h  ej04.cpp  ej04.h  ej05.cpp  ej05.h  ej06.cpp  ej06.h  solucion.cpp  solucion.h
labo/clase_07/L07/CLion/L07-MatricesYTableros/test/: ej02Test.cpp  ej03Test.cpp  ej04Test.cpp  ej05Test.cpp  ej06Test.cpp  solucionTest.cpp
labo/clase_08/tp/code/: CMakeLists.txt  ej01.cpp  ej01.h  ej02.cpp  ej02.h  ej03.cpp  ej03.h  ej04.cpp  ej04.h  ej05.cpp  ej05.h  ej06.cpp  ej06.h  ejercicios.cpp  ejercicios.h  main.cpp
labo/clase_09/L09/CLion/L09-BusquedaYOrdenamiento/: CMakeLists.txt  main.cpp
labo/clase_09/L09/CLion/L09-BusquedaYOrdenamiento/src/: ejercicio1.cpp  ejercicio1.h  ejercicio2.cpp  ejercicio2.h  ejercicio3.cpp  ejercicio3.h  ejercicio4.cpp  ejercicio4.h
labo/clase_09/L09/CLion/L09-BusquedaYOrdenamiento/test/: ejercicio1Test.cpp  ejercicio2Test.cpp  ejercicio3Test.cpp  ejercicio4Test.cpp
parcial/primerParcial/pregunta1/: especificacion.tex
parcial/primerParcial/pregunta4/: demostracion.tex
parcial/primerParcial/pregunta9/: complejidad.cpp
parcial/simulacro/pregunta1/: parMasGrande.tex  pregunta1.tex
parcial/simulacro/pregunta4/: pregunta4.tex
practica/: diccionario.md
practica/practica_01/: 01_logica-binaria.md  02_logica-ternaria.md  03_cuantificadores.md  04_funciones-auxiliares.md
practica/practica_02/: 01_secuencias.md  02_sumatorias-y-productorias.md  patio-de-juegos.md
practica/practica_03/: ej01.md  ej02.md  ej03.md  ej04.md  ej05.md  ej06.md  ej07.md  ej08.md  ej09.md  ej10.md  ej12.md  ej14.md  ej15.md  ej16.md  ej17.md  ej18.md  ej19.md  ej20.md  ej21.md  ej22.md
practica/practica_04/: ej01.md  ej02.md  ej03.md  ej04.md  ej05.md  ej06.md  ej07.md  ej08.md
practica/practica_04/ej02/: ej02.tex
practica/practica_05/tp/ej01/: ej01.tex  ej01.xdv
practica/practica_05/tp/ej02/: ej02.tex
practica/practica_05/tp/ej03/: ej03.tex
practica/practica_08/tp/ej08/code/: CMakeLists.txt
practica/practica_08/tp/ej08/code/src/: multiplicar.cpp  multiplicar.h
practica/practica_08/tp/ej08/code/test/: MultiplicarTEST.cpp
practica/practica_08/tp/ej09/code/: CMakeLists.txt
practica/practica_08/tp/ej09/code/src/: sumasAcumuladas.cpp  sumasAcumuladas.h  sumasAcumuladasPro.cpp  sumasAcumuladasPro.h  utils.cpp  utils.h
practica/practica_08/tp/ej09/code/test/: SumasAcumuladasTEST.cpp
practica/practica_08/tp/ej11/code/: CMakeLists.txt
practica/practica_08/tp/ej11/code/src/: restarAcumulado.cpp  restarAcumulado.h  utils.cpp  utils.h
practica/practica_08/tp/ej11/code/test/: restarAcumuladoTest.cpp
practica/practica_09/tp/: p9
practica/practica_09/tp/code/: CMakeLists.txt
practica/practica_09/tp/code/src/: definciones.h  ej01.cpp  ej01.h  ej02.cpp  ej02.h  ej03.cpp  ej03.h  ej04.cpp  ej04.h  ej05.cpp  ej05.h  ej06.cpp  ej06.h  ej07.cpp  ej07.h  ej08.cpp  ej08.h  ej09.cpp  ej09.h  ej10.cpp  ej10.h  ej12.cpp  ej12.h  ej13.cpp  ej13.h  utils.cpp  utils.h
practica/practica_09/tp/code/test/: ej01Test.cpp  ej02Test.cpp  ej03Test.cpp  ej04Test.cpp  ej05Test.cpp  ej06Test.cpp  ej07Test.cpp  ej08Test.cpp  ej09Test.cpp  ej10Test.cpp  ej12Test.cpp  ej13Test.cpp
practica/practica_10/tp/: CMakeLists.txt  main.cpp
practica/practica_10/tp/src/: definiciones.h  ejercicio2.cpp  ejercicio2.h  ejercicio3.cpp  ejercicio3.h  ejercicios.cpp  ejercicios.h
practica/practica_10/tp/test/: ejercicio2Test.cpp  ejercicio3Test.cpp  ejerciciosTest.cpp
recursos/latex/: Algo1Macros.tex  __latexindent_temp.tex
tp/01/: definiciones.md  ej01.md  ej02.md  ej04.md  ej05.md  ej06.md  ej07.md  ej08.md  ej09.md  ej10.md
tp/01/Entregable/: entregable.tex
tp/01/Latex/: ej01.fdb_latexmk  ej01.fls  ej01.tex  esqueleto.tex
tp/01/ej01/: ej01.md  ej01.tex  ej01_doc.tex
tp/01/ej02/: ej02.md  ej02.tex  ej02_doc.tex
tp/01/ej03/: ej03.md  ej03.tex  ej03_doc.tex
tp/01/ej04/: ej04.md  ej04.tex  ej04_doc.tex
tp/01/ej05/: ej05.md  ej05.tex  ej05_doc.tex
tp/01/ej06/: ej06.md  ej06.tex  ej06_doc.tex
tp/01/ej07/: ej07.md  ej07.tex  ej07_doc.tex
tp/01/ej08/: ej08.md  ej08.tex  ej08_doc.tex
tp/01/ej09/: ej09.md  ej09.tex  ej09_doc.tex
tp/01/ej10/: ej10.tex  ej10_2.tex  ej10_3.tex  ej10_doc.tex
tp/01/entregable/: entregable.tex  entregable.toc
tp/01/playground/Ej10/: CMakeLists.txt  main.cpp
tp/01/playground/Ej10/src/: ej10.cpp  ej10.h  opcion1.cpp  opcion1.h  utils.cpp  utils.h
tp/01/playground/Ej10/test/: Ej10TEST.cpp
(+144 files in other folders)
